# gsplot

./: .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
docs/: Makefile  conf.py  gsplot.rst  gsplot.style.rst  index.md  index.rst  modules.rst  (+2 more)
gsplot/: Dockerfile  __init__.py  gsplot.py  logger.py  pyproject.toml  version.py
gsplot/base/: base.py  base_alias_validator.py  base_passed_args.py
gsplot/color/: colormap.py
gsplot/config/: config.py
gsplot/data/: load.py  load_file.py  path.py
gsplot/docs/: conf.py  gsplot.params.rst  gsplot.plts.rst
gsplot/docs/_build/: .buildinfo  genindex.html  gsplot.html  gsplot.params.html  gsplot.plts.html  gsplot.style.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
gsplot/docs/_build/.doctrees/: environment.pickle  gsplot.doctree  gsplot.params.doctree  gsplot.plts.doctree  gsplot.style.doctree  index.doctree  modules.doctree
gsplot/docs/_build/_sources/: gsplot.rst.txt  index.rst.txt  modules.rst.txt
gsplot/figure/: __init__.py  axes.py  axes_base.py  axes_range_base.py  figure_tool.py  figure_tools.py  show.py  store.py
gsplot/gsplot/: __init__.py  gsplot.py  test.py
gsplot/gsplot/params/: params.py
gsplot/gsplot/plts/: __init__.py  axes.py  show.py  store.py
gsplot/gsplot/plts/.jukit/: .jukit_info.json
gsplot/gsplot/style/: label.py  ticks.py
gsplot/params/: params.py
gsplot/path/: path.py
gsplot/plot/: base_plot.py  line.py  line_base.py  line_collection.py  line_colormap.py  line_colormap_base.py  line_colormap_dashed.py  line_colormap_solid.py  scatter.py  scatter_colormap.py
gsplot/plts/: __init__.py  axes.py  axes_base.py  figure_tool.py  show.py  store.py
gsplot/style/: __init__.py  canvas.py  graph.py  label.py  legend.py  legend_colormap.py  ticks.py  title.py
gsplot/tests/: gsa_test.py  gss_test.py  temp.py
gsplot/tests/.jukit/: .jukit_info.json
(+129 files in other folders)
