[tool.poetry]
name = "gsplot"
version = "0.0.1"
description = "Provide a simple way to plot scientific data with matplotlib"
authors = [
  "Giordano Mattoni <email>",
  "Soichiro Yamane <soichiro.yamane.19970619@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"


[tool.poetry.group.deb.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"
pre-commit = "^3.7.1"
sphinx = "^7.3.7"
furo = "^2024.5.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
